# mcutil

./: .gitignore  Cargo.toml  README.md  multitool.py
journal/: contents.md
journal/2023/June/: 15th.md  16th.md  17th.md
macrocraft/: Cargo.toml
macrocraft/src/: lib.rs  nbt.rs
src/: error.rs  ioext.rs  lib.rs  macros.rs
src/data/: mod.rs  quad.rs  terrain.rs
src/math/: bit.rs  bounds.rs  coord.rs  geometry.rs  grid.rs  mod.rs
src/meshing/: mod.rs
src/nbt/: editable.rs  format.rs  io.rs  macros.rs  mod.rs  snbt.rs  table.rs  tag.rs  tagpath.rs  tagref.rs  tagtype.rs  verify.rs  visit.rs
src/tree/: mod.rs  quad.rs
src/util/: coreext.rs  mod.rs  traits.rs
src/world/: block.rs  blockregistry.rs  blockstate.rs  chunk.rs  container.rs  level.rs  mod.rs  region.rs  world.rs
src/world/io/: mod.rs  region.rs  region_old.rs  regionbuilder.rs  regionfile.rs
src/world/io/region/: compressionscheme.rs  coord.rs  header.rs  info.rs  managedsector.rs  mod.rs  prelude.rs  reader.rs  regionfile.rs  sector.rs  sectormanager.rs  timestamp.rs  writer.rs
