[package]
name = "mcutil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
preserve_order = ["dep:indexmap"]

[dependencies]
thiserror = "1.0"
num-traits = "0.2.15"
indexmap = { version = "1.9.1", optional = true }
bytemuck = "1.12.1"
chumsky = "0.8.0"
flate2 = "1.0.25"
chrono = "0.4.23"
tempfile = "3.3.0"
bitflags = "1.3.2"
momo = "0.2.2"
byteorder = "1.4.3"
macrocraft = { path = "./macrocraft" }
sorted-vec = "0.8.2"
